Kubernetes/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hoi-ingress
  annotations:
    nginx-trial: "true"
spec:
  rules:
  - host: temshop.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hmm-app
            port:
              number: 80
